--- a/apps/cooklens-e2e/project.json
+++ b/apps/cooklens-e2e/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "monorepo-e2e",
+  "name": "cooklens-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/monorepo-e2e/src",
+  "sourceRoot": "apps/cooklens-e2e/src",
   "targets": {
     "e2e": {
       "executor": "@nx/playwright:playwright",
-      "outputs": ["{workspaceRoot}/dist/.playwright/apps/monorepo-e2e"],
+      "outputs": ["{workspaceRoot}/dist/.playwright/apps/cooklens-e2e"],
       "options": {
-        "config": "apps/monorepo-e2e/playwright.config.ts"
+        "config": "apps/cooklens-e2e/playwright.config.ts"
       }
     },
     "lint": {
@@ -16,5 +16,5 @@
       "outputs": ["{options.outputFile}"]
     }
   },
-  "implicitDependencies": ["monorepo"]
+  "implicitDependencies": ["cooklens"]
 }
