--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,12 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# NX
 .nx/cache
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
