--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,39 @@
-# Add files here to ignore them from prettier formatting
-/dist
-/coverage
-/.nx/cache
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# VSCode IDE settings
+.vscode
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# build
+.next/
+out/
+build
+dist
+
+# misc
+.DS_Store
+*.pem
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# turbo
+.turbo
