--- a/apps/cooklens/.eslintrc.json
+++ b/apps/cooklens/.eslintrc.json
@@ -11,7 +11,13 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
       "rules": {
-        "vue/multi-word-component-names": "off"
+        "no-console": ["warn", { "allow": ["warn", "error"] }],
+        "no-debugger": "warn",
+        "prettier/prettier": ["warn"],
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
       }
     }
   ]
