--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,15 @@
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[functions]
+  external_node_modules = ["mongodb", "keyv"]
+
 [[plugins]]
 package = "./tools/plugins/netlify/stop-build"
