--- a/apps/cooklens/netlify.toml
+++ b/apps/cooklens/netlify.toml
@@ -1,8 +1,11 @@
+[build]
+  functions = "apps/cooklens/functions"
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
-  
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
